--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,9 +1,12 @@
-.conteiner{
+.conteiner_footer {
     display: flex;
     justify-content: center;
-    height: 10vh;
-    margin-top: 26%;
-    
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    background-color: #227f4A;
     
 }
 
@@ -17,11 +20,9 @@
 #text {
     width: 100%;
     color: white;
-    font-weight: bold;
-    font-size: 30px;
+    font-weight: lighter;
+    font-size: 20px;
     
     
     
 }
-
-
