--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -26,16 +26,49 @@
     color: white;
 }
 
-#Top_bar #menu {
-    display: none;
-    height: auto;
-    width: 300px;
-    bottom: auto;
-    top: 100%;
-    right: 1px;
-    position: absolute;
-    margin: 0;
+.menu > li > a span:not(.description) {
+    display: block;
+    line-height: 60px;
+    padding: 0 20px;
+    white-space: nowrap;
+    border-right-width: 1px;
+    border-style: solid;
 }
-#Top_bar #menu {
-    z-index: 201;
+
+ul {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+li {
+    list-style-type: none;
+}
+
+nav {
+    width: 100%;
+    
+}
+
+
+span {
+    color: white;
+    font-weight: bold;
+    padding: 0px 20px;
+}
+
+
+@media (max-width: 1240px) {
+    .Conteiner_header{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .div_logo{
+        width: 408px;
+        height: 80px;
+        
+    }
 }
