Responsivo (sem o toggle no header)

--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,3 @@
-.App {
-  display: flex;
-  width: 100vw;
-  align-items: center;
-  justify-content: center;
-  margin-top: 10%;
-  
-}
-
-select {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 22px;
-}
-
-
-.form-control label {
-  display: flex;
-  flex-direction: column;
-  margin-top: 15px ;
-  margin-bottom: 15px;
-  text-align: center;
-  font-weight: bold;
-  margin-bottom: 2%;
-
-  
-}
-
-hr{
-  color: white;
-  bottom: 0;
-}
-
-.Botao {
-  display: flex;
+.Conteiner{
   width: 100%;
-  align-items: center;
-  justify-content: center;
-  background-color: #65d118;
-  border-color: #5cc114;
-  height: 40px;
-  margin-top: 20px;
 }
