--- a/src/Components/Form/style.css
+++ b/src/Components/Form/style.css
@@ -1,13 +1,34 @@
 .App {
     display: flex;
-
+    position: relative;
     align-items: center;
     justify-content: center;
     margin-top: 10%;
+    
 
 }
-  
+
+#title{
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form{
+    display: block;
+    align-items: center;
+    justify-content: center;
+    background-color: #195A34;
+    border-radius: 10px;
+    padding: 0 50px 30px;
+
+}
+
 select {
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,19 +39,24 @@ select {
   
   
 .form-control label {
+    color: white;
     display: flex;
     flex-direction: column;
     margin-top: 15px ;
     margin-bottom: 15px;
     text-align: center;
     font-weight: bold;
-    margin-bottom: 2%;
+    margin-bottom: 5%;
+    padding-bottom: 10px;
   
     
 }
+
   
 .Botao {
     color: white;
+    font-size: 25px;
+    font-weight: bold;
     display: flex;
     width: 100%;
     align-items: center;
