--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -1,102 +1,97 @@
-header {
-    background-color: #227f4A;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    top: 61px;
-    left: 0;
-    
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+
 }
 
-
-.Conteiner_header {
-    background-color: #227f4A;
-    max-width: 1220px;
+nav{
+    background: #227f4A;
     height: 80px;
-    top: 0!important;
-    left: 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    opacity: 97;
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 10%)
-    
-}
-
-.div_logo{
-    margin-top: 10px;
-    width: 708px;
-    height: 80px;
-
-}
-
-img {
-    position: absolute;
-    
-    width: 201px;
-    height: 60px;
-}
-
-.menu > li > a span:not(.description) {
-    display: block;
-    line-height: 60px;
-    padding: 0 80px;
-    white-space: nowrap;
-    border-right-width: 1px;
-    border-style: solid;
-}
-
-ul {
     width: 100%;
-    display: flex;
     
 }
 
-li {
-    list-style-type: none;
-}
-
-span {
+img.logo {
     color: white;
-    font-weight: lighter;
-    padding: 0px 20px;
+    width: 201px;
+    height: 60;
+    margin-left: 30px;
+    transition: .5s;
+
 }
 
+nav ul{
+    float:right;
+    margin-right: 20px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+nav ul li a{
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
 
+}
 
+a.active, a:hover{
+    background: #65D118;
+    transition: .5s;
+}
 
-@media (max-width: 1250px) {
-    .Conteiner_header{
-        
-        justify-content: space-around;
+.check_botton{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+
+}
+
+@media (max-width: 1300px){
+    .check_botton{
+        display: block;
+    }
+    img.logo{
+        margin-left: 150px;
+        transition: .5s;
+    }
+    ul {
+        position: fixed;
         width: 100%;
+        height: 100vh;
+        background: #227f4A;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover, a.active{
+        background: none;
+        color: #65D118;
+    }
+    #check:checked ~ ul{
         left: 0;
-        top: 0!important;
-        z-index: 701;
-        opacity: 97;
-        box-shadow: 0 2px 5px 0 rgb(0 0 0 / 10%);
-        
-    }
 
-    .div_logo{
-        width: auto;
-        margin: 0 30px 0 20px;
-                
     }
-
-    ul{
-        display: none;
-        justify-content: space-around;
-    }
-    
-    span {
-        color: white;
-        font-weight: lighter;
-        padding: 0px 10px;
-    }
-
-    
 }
-
-
