--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -8,6 +8,7 @@
 }
 
 nav{
+    
     background: #227f4A;
     height: 80px;
     width: 100%;
@@ -24,10 +25,12 @@ img.logo {
 }
 
 nav ul{
+    
     float:right;
     margin-right: 20px;
 }
 nav ul li{
+    
     display: inline-block;
     line-height: 80px;
     margin: 0 5px;
@@ -42,6 +45,7 @@ nav ul li a{
 }
 
 a.active, a:hover{
+    
     background: #65D118;
     transition: .5s;
 }
@@ -62,6 +66,7 @@ a.active, a:hover{
 
 @media (max-width: 1300px){
     .check_botton{
+        
         display: block;
     }
     img.logo{
@@ -69,7 +74,7 @@ a.active, a:hover{
         transition: .5s;
     }
     ul {
-        position: fixed;
+        position: absolute;
         width: 100%;
         height: 100vh;
         background: #227f4A;
